cleaned up versions index page

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -213,5 +213,5 @@ a.cta span
     // have headings here where we don't want them
     font-size: $text_size !important
     font-family: $body_font
-    font-weight: normal
+    font-weight: normal !important
     color: $body_text
