--- a/app/assets/stylesheets/_nav_primary.sass
+++ b/app/assets/stylesheets/_nav_primary.sass
@@ -7,6 +7,7 @@
   position: fixed
   top: 82px
   margin-left: -70px
+  z-index: 10
 
 #nav_primary nav
   background: image-url("nav_primary.png") no-repeat right bottom
@@ -63,7 +64,7 @@
 #nav_primary_bible a.icon span
   background:
     image: image-url("nav_bible.png")
-    
+
 #nav_primary_plans a.icon span
   background:
     image: image-url("nav_plans.png")
