--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -386,7 +386,7 @@
 .ip, .im, .iex, .p, .m, .nb, .cls
   font-size: 1.0em
   line-height: 1.5em
-  margin: 0 0 1.5em 0
+  margin: 0
 
 .ipi, .imi, .pm, .pmc, .pi, .mi
   margin: 0 1em
@@ -535,7 +535,6 @@
 
 .sc
   font-variant: small-caps
-
 
 // `Nav Arrows
 //----------------------------------------------------------------------------------------------------
