comments fixed with new background

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -289,20 +289,19 @@
   display: none
 
 .note > .label
-  background:
-    image: image-url('trans-note-light@2x.png')
-    size: 50% 50%
-  text-indent: -1200px
-  width: 16px
+  text-indent: -900px
+  display: inline-block
+  background: image-url('trans-note-light@2x.png') no-repeat
+    size: 16px 16px
   height: 16px
+  width: 16px
+  margin-right: 2px
 
 .inner_container
   left: 0
   display: block
   position: relative
   max-width: 120px
-
-
 
 .note > .outer_container > .inner_container >.body
   +round
