use i18n for clear selected verses

--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -14,7 +14,7 @@
           %span
             =t("ref.choose version")
       %li#li_selected_verses.separator.hide
-        %a#clear_selected_verses.button{:href => '#', :title => 'Clear Selected Verses'}
+        %a#clear_selected_verses.button{:href => '#', :title => ('ref.clear verses')}
           %span.icon_x
             = t('ref.clear verses')
         %a.dynamic_menu_trigger.button{id:"menu_selected_trigger", href:"#menu_bookmark", title:t("ref.share")}
