--- a/app/views/api_test/index.html.haml
+++ b/app/views/api_test/index.html.haml
@@ -1,12 +1,20 @@
 - @sidebar = false
-
+- @main_nav = false
+- require 'descriptive_statistics'
 
 %article
-  %table
-    %tr
-      %th API Call
-      %th Response Times
-    = @results.each do |r|
+  -if @results
+    %table
       %tr
-        %td= r[:title]
-        %td= r[:data].to_s
+        %th <strong>API Call</strong>
+        %th <strong>Mean (ms)</strong>
+        %th <strong>1σ (ms)</strong>
+        %th <strong>Raw Times</strong>
+      - @results.each do |r|
+        %tr
+          %td= r[:title]
+          %td= r[:times].mean.round(0)
+          %td= r[:times].standard_deviation.round(0)
+          %td= r[:times].to_s
+  -else
+    %h1 Stranger Danger!
