killing quotes from version index

--- a/app/views/versions/index.html.haml
+++ b/app/views/versions/index.html.haml
@@ -28,4 +28,4 @@
               - if version.publisher_id
                 = link_to "#{version.title} (#{version.abbreviation.upcase})" , version_path(version)
               - else
-                "#{version.title} (#{version.abbreviation.upcase})"
+                = "#{version.title} (#{version.abbreviation.upcase})"
