--- a/app/views/shared/_menu_bookmark.html.haml
+++ b/app/views/shared/_menu_bookmark.html.haml
@@ -56,6 +56,7 @@
           %br
           %input{:type => 'text', :id => 'bookmark_labels', :name => 'bookmark[labels]', :placeholder => t("bookmarks.labels placeholder")}
           %input{:class => "verses_selected_input", name: "bookmark[references]", type: "hidden"}
+          %input{type: "hidden", name: "bookmark[version_id]", value: @version.id }
           / %span
           /   %b
           /     Color
