Commence the downcasing.

--- a/app/cells/version_selector/_items.html.haml
+++ b/app/cells/version_selector/_items.html.haml
@@ -1,5 +1,5 @@
 - versions.each do |v|
-  %tr{"data-version" => v.id, "data-abbrev" => v.abbreviation}
+  %tr{"data-version" => v.id, "data-abbrev" => v.abbreviation.downcase}
     %th
       %a{:href => "#"}= v.human
     %td{class: v.audio_version? ? "audio" : ""}
