--- a/app/assets/stylesheets/_vars.sass
+++ b/app/assets/stylesheets/_vars.sass
@@ -17,6 +17,7 @@ $blue_dark: darken($blue, 15%)
 $body_text: #444
 $radius: 4px
 $mute: #888
+$reader_line_height: 2em
 
 =round
   +border-radius($radius)
