--- a/app/views/plans/show_subscribed.html.haml
+++ b/app/views/plans/show_subscribed.html.haml
@@ -9,3 +9,11 @@
       = render partial: "pane_devotional"
     - else
       =render partial: "pane_no_devotional"
+
+- content_for :javascripts do
+  %script
+    :plain
+
+      jQuery(document).ready(function() {
+        var menu = new VersionMenu({menu:"#menu_version",trigger:"#menu_version_trigger"});
+      });
