Fix for chapter select bug on chapter not found page. Fixes #314.

--- a/app/views/references/invalid_ref.html.haml
+++ b/app/views/references/invalid_ref.html.haml
@@ -15,3 +15,5 @@
   %p
     %b= link_to t("ref.about the version", version: @version), version_path(@version)
   %p= @version.copyright
+
+= render partial: "js"
