--- a/app/views/pages/bdc_home.html.haml
+++ b/app/views/pages/bdc_home.html.haml
@@ -16,7 +16,7 @@
           = link_to('Read the Bible Now', bible_path, :class => 'cta')
         %div#hero_links
           %div{style: "height: 40px;"}
-            %script{:src => "http://connect.facebook.net/en_US/all.js#xfbml=1"}
+            %script{:src => "https://connect.facebook.net/en_US/all.js#xfbml=1"}
             %fb:like{:layout => "button_count", :show_faces => "false", :width => "450", font: "arial"}
           %div{style: "height: 40px;"}
             %g:plusone{size: "medium", href: "http://www.bible.com"}
