--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -11,7 +11,7 @@
 
 = render partial: 'reader_header'
 
-%article{"data-setting-font" => @font, 'data-setting-size' => @size, "data-selected-verses" => "[#{@verses}]", "data-verse-modal-enabled" => "#{!@single_verse.nil?}", "data-fullscreen" =>@full_screen, "data-book" => @reference[:book].to_s.downcase, "data-book-api" => @reference[:book].sub(/[A-Z]+/) {|m| m.downcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
+%article{"data-setting-font" => @font, 'data-setting-size' => @size, "data-selected-verses" => @verses.join(","), "data-verse-modal-enabled" => "#{!@single_verse.nil?}", "data-fullscreen" =>@full_screen, "data-book" => @reference[:book].to_s.downcase, "data-book-api" => @reference[:book].sub(/[A-Z]+/) {|m| m.downcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
   %div.nav_items
     - direction = 'rtl' if @version.try(:rtl?)
     = link_to("previous", bible_path(@reference.previous_chapter), class: "nav_prev #{direction}") if @reference.previous_chapter
