--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -24,6 +24,6 @@
 %footer
   %p
     %b= link_to t("ref.about the version", version: @version), version_path(@version)
-  %p= @reference.copyright.html_safe
+  %p= @reference.copyright.html_safe if @reference.copyright
 
 = render partial: "js"
