Fix to Hide WYSIWYG labels in Firefox unless hovering
Closes #343

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -119,6 +119,10 @@
   text-overflow: ellipsis
   vertical-align: bottom
 
+// Fix to Hide WYSIWYG labels in Firefox unless hovering
+.widget .wysiwyg li:before
+  display: none
+
 // `Menu
 //----------------------------------------------------------------------------------------------------
 
