Hiding BOOKS verse numbers + css fixes.

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -626,6 +626,11 @@ article[data-setting-size="user_setting_size_large"] .verse > .label
 .vid111 .content:after
   content: " "
 
+// BOOKS version should not display verse numbers
+.vid31 .verse span.label
+  display: none
+
+
 // `Nav Arrows
 //----------------------------------------------------------------------------------------------------
 .nav_prev,
