unverified user attempted login handled

--- a/app/views/users/resend_confirmation.html.haml
+++ b/app/views/users/resend_confirmation.html.haml
@@ -1,7 +1,7 @@
 %article
   %h1= t('users.resend confirmation title')
   %p= t('users.resend confirmation copy')
-  = form_tag resend_confirmation_path do 
+  = form_tag resend_confirmation_path do
     %p
-      = text_field_tag :email
+      = text_field_tag :email, params[:email]
       = submit_tag t('users.resend confirmation button')
