psalm heading in NIV styling

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -639,6 +639,17 @@ article[data-setting-size="user_setting_size_large"] .verse > .label
 .vid31 .verse span.label
   display: none
 
+// For Psalms headings in NIV
+.vid111 .bkPSA .it
+  display: block
+  margin-bottom: 1em
+
+// For Psalms headings in NIV
+// don't display block for notes italics
+.vid111 .bkPSA .note .it
+  display: inline
+  margin-bottom: 0
+
 
 // `Nav Arrows
 //----------------------------------------------------------------------------------------------------
