In-Reader Reading Plans: Routes and subscriptions controller.
Hooking up subscriptions index implementation and removing previous plans index implementation for a users subscriptions.

Moving subscription read page to subscriptions controller, and removing implementation from plans.

Moving creation of subscription to subscription controller, removing implementation from plans controller.

Updating view todays reading plan button.

Unsubscribe implementation moved to subscriptions controller, removed from plans controller.

Working subscription  updates in subscription controller, removed implementation from plans controller.

Force login for all subscription controller actions.

--- a/app/views/plans/_default_sidebar.html.haml
+++ b/app/views/plans/_default_sidebar.html.haml
@@ -2,9 +2,9 @@
   .widget
     - if current_auth
       -if current_user.subscribed_to?(@plan)
-        = link_to(t('plans.read today'), plan_path(@plan), class: 'action_button_green', style: "margin-bottom: 10px")
+        = link_to(t('plans.read today'), user_subscription_path(current_user,@plan), class: 'action_button_green', style: "margin-bottom: 10px")
       - else
-        = link_to(t('plans.subscribe to plan'), plan_start_path(@plan), :class => 'action_button_green', style: "margin-bottom: 10px")
+        = link_to(t('plans.subscribe to plan'), user_subscriptions_path(current_user, plan_id: @plan.to_param), class: 'action_button_green', style: "margin-bottom: 10px", method: :post)
     - else
       = link_to(t('plans.subscribe to plan'), sign_up_path(source: "plan", id: @plan.id, redirect: plan_start_path(@plan)), class: 'action_button_green', style: "margin-bottom: 10px")
   .widget
