--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -256,29 +256,19 @@
   margin-left: 3px
 
 .verse > .label
-  +round
-  +background-image(linear-gradient(#eee, #ddd))
-  background-color: #eee
-  border-top: 1px solid #ccc
   color: #666
-  cursor: pointer
-  display: inline-block
   font:
     family: $body_font
-    size: 10px
     weight: bold
   line-height: 1
   margin:
     top: 2px
-    right: 2px
-  padding: 2px 0.3em 3px
-  vertical-align: top
-  text-indent: 0
+    right: 4px
 
 .rtl > .version .verse > .label
   margin:
     right: 0px
-    left: 2px
+    left: 4px
 
 article .verse > .label,
 article[data-setting-size="user_setting_size_small"] .verse > .label
@@ -301,10 +291,11 @@ article[data-setting-size="user_setting_size_large"] .verse > .label
   text-indent: -99999px
   display: inline-block
   background: image-url('trans-note-light@2x.png') no-repeat
-    size: 16px 16px
-  height: 16px
-  width: 16px
+    size: 10px 10px
+  height: 10px
+  width: 10px
   margin-right: 4px
+  margin-left: 2px
 
 .inner_container
   left: 0
